--- a/tushar.tex
+++ b/tushar.tex
@@ -87,9 +87,9 @@ S.S.C. & Century Rayon School & Mumbai Division & 2010 & 89.9\% \\
  \begin{flushleft}
  \textbf{ACHIEVEMENTS} :
  \enumerate
- \item Lecture on science and technology At Don Bosco school.
+ \item Lecture on science and technology at Don Bosco school.
  \item Best Project Winner at SeS Campus from Computer Department
- \item EYIC - 2016  winner nder Best Demonstration and  presentation ctegory
+ \item EYIC - 2016  winner under Best Demonstration and  presentation ctegory
  \item Top  10 finalist of Seed IT idol in Mumbai university. Overall Maharashtra to be conducted
  
 \end{flushleft}
